# q2-ml-bot

./: .gitignore  AGENTS.md  Cargo.toml  README.md
crates/q2-lattice/: Cargo.toml  DYN-SCHEMA.md  README.md  pyproject.toml
crates/q2-lattice/src/: dynstate.rs  lib.rs
crates/q2-lattice/src/atlas/: SCHEMA.md  admission.rs  aggregate.rs  coord.rs  error.rs  graph.rs  guide.rs  l0.rs  manifest.rs  mod.rs  objective.rs  recovery.rs  runtime.rs  storage.rs
crates/q2-lattice/tests/: atlas_schema.rs  dyn_snapshot.rs
docs/: ATLAS-ENTITY-SEMANTICS-CONTRACT.md  ATLAS-SURFACE-BANDS-CONTRACT.md  B2-ATLAS-SURFACE-ENTITY-INTEGRATION.md  DISTRIBUTED-CUTOVER-ASSESSMENT.md  DISTRIBUTED-ROLLOUTS.md  HANDOFF-2026-07-11.md  HANDOFF-2026-07-13-NETWORK.md  LATTICE-PROTOTYPE-2026-07-11.md  MAP-LIGHTING-GEOMETRY-CONTRACT.md  MAP-PACK-CANDIDATES-2026-07-13.md  ML_FRAMEWORK.md  MULTIRES-LATTICE-MAP-ATLAS-DESIGN-2026-07-14.md  MULTIRES-LATTICE-MAP-ATLAS-PLAN-2026-07-14.md  MULTIRES-WSL-ISOLATED-STAGING.md  NETWORK-CLIENT-BATCH.md  NETWORK-CLIENT-FRAME-BARRIER.md  NETWORK-CLIENT-HARNESS.md  ROLLOUT-HOST-PROVISIONING.md  RUNTIME-ATTESTATION-THROUGHPUT-2026-07-12.md  RUST-LATTICE-PLAN.md  SEASON-QUALITY-GATE.md  TARGET-THERMAL-LATTICE-PROTOTYPE-2026-07-14.md  TELEMETRY-AUDIT-2026-07-14.md  tactical_modes.md
harness/: atlas_analyzer.py  atlas_b1_authority.py  atlas_catalog.py  atlas_drop_replay.py  atlas_entity_semantics.py  atlas_exact_drops.py  atlas_source_closure.py  atlas_surface_bands.py  (+33 more)
tools/q2-dyn-evidence/: Cargo.toml  README.md  build.rs
tools/q2-dyn-evidence/src/: main.rs
(+373 files in other folders)
