[package]
name = "q2-dyn-evidence"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
libc = "0.2"
q2-lattice = { path = "../../crates/q2-lattice" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zstd = "0.13"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
